--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="dark" data-theme="dark">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/download.svg" />
@@ -7,7 +7,7 @@
     <title>SmallTalk</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="dark"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
